taskmanager: Use proper QUrls for recent document actions

The resource can either be a URL or an absolute path, the url() method
converts the latter into a proper URL. Without this, a local path might end
up getting parsed (badly) as URL, causing weird behaviour later, like resorting
to kioexec/kio-fuse.

BUG: 457685


(cherry picked from commit bf37558f36494d13f0fe0f00862937d859aa20f1)